# Tutorial_09_Social_Robot_Navigation

./: .gitignore  .gitmodules  README.md  TUTORIAL.md  build-docker.sh  docker-compose.yaml  pull_docker.sh  run-docker.sh
.ci/: .bashrc  Dockerfile  entrypoint.sh
.ci/socnav_sim/: CMakeLists.txt  package.xml
.ci/socnav_sim/include/socnav_sim/: sim.hpp  simros.hpp
.ci/socnav_sim/src/: sim.cpp  simros.cpp
ros2_ws/MPPI/: compile.sh
ros2_ws/MPPI/src/socnav_controller/: package.xml  setup.cfg  setup.py
ros2_ws/MPPI/src/socnav_controller/socnav_controller/: mppi.py
ros2_ws/MPPI/src/socnav_msgs/: CMakeLists.txt  package.xml
ros2_ws/MPPI/src/socnav_msgs/msg/: TrackedAgent.msg  TrackedAgents.msg
ros2_ws/MPPI/src/socnav_tutorial/: CMakeLists.txt  package.xml
ros2_ws/MPPI/src/socnav_tutorial/config/: nav2_params.yaml
ros2_ws/MPPI/src/socnav_tutorial/launch/: bringup_launch.py  localization_launch.py  mppi_nav2_launch.py  navigation_launch.py  rviz2_launch.py
ros2_ws/MPPI/src/socnav_tutorial/maps/: map.pgm  map.yaml
ros2_ws/MPPI/src/socnav_tutorial/rviz/: socnav_tutorial.rviz
ros2_ws/MPPI/src/socnav_tutorial/scripts/: publish_tracked_agents.py  visualize.py
ros2_ws/MPPI/src/socnav_tutorial/worlds/: world.yaml
ros2_ws/Nav2/: nav.rviz  robot.urdf
ros2_ws/Nav2/launch/: nav2_config.yaml  nav2_launch.py  slam_launch.py
ros2_ws/Nav2/maps/: map.pgm  map.yaml
ros2_ws/Nav2/worlds/: world.pgm  world.yaml
