<?xml version="0.1.0"?>
<package format="3">
  <name>socnav_msgs</name>
  <version>0.1.0</version>
  <description>message definitions for social navigation</description>

  <maintainer email="ptsingaman@laas.fr">Phani Teja Singamaneni</maintainer>

  <author email="ptsingaman@laas.fr">Phani Teja Singamaneni</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>                               
   <build_type>ament_cmake</build_type> 
  </export> 

</package>