<?xml version="1.0"?>
<package format="3">
  <name>socnav_tutorial</name>
  <version>0.0.1</version>
  <description>configuration and launch files for socnav_tutorial</description>

  <maintainer email="ptsingaman@laas.fr">Phani Teja Singamaneni</maintainer>
  <author email="ptsingaman@laas.fr">Phani Teja Singamaneni</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>ament_index_cpp</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
    
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

